crates/brix-oracle/tests/snapshots/settle__pricing_masked.snap
---
source: crates/brix-oracle/tests/settle.rs
expression: render(&settled)
---
revision 1
  BaseAmount:
    { amount: 100, order: Node(1a1d723e) }
    { amount: 200, order: Node(e3b8875f) }
  ComputedPrice:
    { amount: 100, order: Node(1a1d723e) }
  EffectivePrice:
    { amount: 95, order: Node(e3b8875f) }
    { amount: 100, order: Node(1a1d723e) }
  ManualPrice:
    { amount: 95, order: Node(e3b8875f) }
  Masked: 1
