crates/brix-oracle/tests/snapshots/settle__reachability.snap
---
source: crates/brix-oracle/tests/settle.rs
expression: render(&settled)
---
revision 1
  Link:
    { dst: "b", src: "a" }
    { dst: "c", src: "b" }
    { dst: "d", src: "c" }
  Reach:
    { dst: "b", src: "a" }
    { dst: "c", src: "a" }
    { dst: "c", src: "b" }
    { dst: "d", src: "a" }
    { dst: "d", src: "b" }
    { dst: "d", src: "c" }
