crates/brix-oracle/tests/snapshots/settle__rule_error.snap
---
source: crates/brix-oracle/tests/settle.rs
expression: render(&settled)
---
revision 1
  LateRisk:
    { order: Node(a60fba1d), risk: 90 }
  Order:
    { due: 0, ref: "ord-bad" }
    { due: 10, ref: "ord-ok" }
  RuleError:
    Risk @ Risk#1: Str("PastDue")
